--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-db
-*.exe
-*.dll
-derplogs
-potato
-test.lua
-tcpnetpassword.txt
-test.txt
-*.bat
-sbox.tmp
-log.txt
+/db
+/*.exe
+/*.dll
+/derplogs
+/potato
+/test.lua
+/tcpnetpassword.txt
+/test.txt
+/*.bat
+/sbox.tmp
+/log.txt
