--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,6 @@
 /www/paste/*
-/*.exe
-/*.dll
-/db/tells
-/derplogs
-/potato
-/test.lua
-/tcpnetpassword.txt
-/githubpassword.txt
-/routerpassword.txt
-/test.txt
-/*.bat
+/db
 /sbox.tmp
-/log.txt
-/lua52
-/lua53
-/luac52
-/luac53
+/logs
+/bin
+/pass
