--- a/c/Makefile
+++ b/c/Makefile
@@ -1,2 +1,2 @@
 install :
-	gcc -g -Wall -fPIC --shared -o ../main main.c -I/usr/local/include
+	gcc -o ../main main.c -I/usr/local/include -I. -L/usr/local/lib -L. -lm -lluajit -ldl
