--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,21 @@
-/www/paste/*
-/db
+/www/
+/db/*
+/persist/*
 /sbox.tmp
+/asynctemp.lua
 /logs
+/log.txt
+/logold.txt
+/bin/*
+/lib/*
+/pass/*
+/liberis.so
+/luajit
 /bin
-/pass
+/eris
+/lua-5.3.0
+/luajit-2.1
+*.so
+*.a
+*.o
+*.so.2
