--- a/c/Makefile
+++ b/c/Makefile
@@ -1,2 +1,4 @@
 install :
-	gcc -o ../main main.c -I/usr/local/include -I. -L/usr/local/lib -L. -lm -lluajit -ldl
+	gcc -O1 -c main.c -I/usr/local/include -I.
+	gcc -O1 -o main main.o -L/usr/local/lib -L. -lm -lluajit -ldl
+	
